Allow app.yml to issue comments, updated index.js with sample code, updated private flag in package.json
Signed-off-by: Steffen B <steffenbj@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "master-branch-guard",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "This app automatically protects the master branch when new repositories are created.",
   "author": "Steffen Bjerkenås <steffenbj@hotmail.com>",
   "license": "ISC",
