--- a/app.yml
+++ b/app.yml
@@ -22,7 +22,7 @@ default_events:
 # - deployment_status
 # - fork
 # - gollum
-# - issue_comment
+- issue_comment
 - issues
 # - label
 # - milestone
@@ -38,9 +38,9 @@ default_events:
 # - pull_request
 # - pull_request_review
 # - pull_request_review_comment
-# - push
+- push
 # - release
-# - repository
+- repository
 # - repository_import
 # - status
 # - team
@@ -54,7 +54,7 @@ default_events:
 default_permissions:
   # Repository creation, deletion, settings, teams, and collaborators.
   # https://developer.github.com/v3/apps/permissions/#permission-on-administration
-  # administration: read
+  administration: write
 
   # Checks on code.
   # https://developer.github.com/v3/apps/permissions/#permission-on-checks
@@ -62,7 +62,7 @@ default_permissions:
 
   # Repository contents, commits, branches, downloads, releases, and merges.
   # https://developer.github.com/v3/apps/permissions/#permission-on-contents
-  # contents: read
+  contents: read
 
   # Deployments and deployment statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-deployments
