--- a/app.yml
+++ b/app.yml
@@ -22,7 +22,7 @@ default_events:
 # - deployment_status
 # - fork
 # - gollum
-- issue_comment
+# - issue_comment
 - issues
 # - label
 # - milestone
@@ -38,7 +38,7 @@ default_events:
 # - pull_request
 # - pull_request_review
 # - pull_request_review_comment
-- push
+# - push
 # - release
 - repository
 # - repository_import
